Fixing Container Spacing Issue at the bottom
The bottom of the posts section was going beyond the profile container

Adjusted the overflow but mainly added in flex-grow: 1

--- a/code/css/personal-profile.css
+++ b/code/css/personal-profile.css
@@ -1,9 +1,11 @@
 
 .personal-profile{
   height: 100vh;
+  display: flex;
   box-sizing: border-box;
   background-color: var(--background-secondary);
   padding: 1em 1em 1em 1em;
+  flex-direction: column;
 }
 
 .profile-header{
@@ -11,8 +13,8 @@
 }
 
 .all-posts{
-  height: 90%;
   border-radius: 2em;
+  flex-grow: 1;
   padding: 2em 2em 2em 2em;
   overflow-y: scroll;
   box-sizing: border-box;
@@ -46,6 +48,7 @@ a{
 .blog-photo{
   flex-basis: 30%;
   height: auto;
+  overflow: auto;
   max-width: 15em;
   border-radius: 2em;
 }
@@ -53,6 +56,7 @@ a{
 /*This is for the author and date*/
 .posting-info{
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding: 1em 0em;
 }
@@ -64,10 +68,6 @@ a{
   height: 1em;
   vertical-align: text-top;
   margin: auto 0em auto 0.5em;
-}
-
-#interaction-container{
-  overflow: auto;
 }
 
 #interaction-button{
